[package]
name = "wren"
version = "0.1.4"
authors = ["Calvin Ikenberry"]
description = "Bindings to the Wren scripting language API"
build = "build.rs"
readme = "README.md"
keywords = ["wren", "bindings", "wrapper"]
license = "MIT"
repository = "https://github.com/calviken/wren-rust"
documentation = "https://docs.rs/wren"

[dependencies]
libc = "0.2"

[dev-dependencies]
lazy_static = "0.2"
