[package]
name = "wren-sys"
version = "0.3.1"
authors = ["Calvin Ikenberry"]
description = "FFI bindings to the Wren scripting language API"
edition = "2018"
readme = "README.md"
keywords = ["wren", "bindings", "ffi"]
license = "MIT"
homepage = "https://github.com/calviken/wren-rust"
repository = "https://github.com/calviken/wren-rust"
documentation = "https://docs.rs/wren-sys"
build = "build.rs"

[dependencies]
libc = "0.2"
